Links to software tools
Added links to software tools used in each post, links to Github Gists. Users may now scroll to the end of each article to find everything needed to reproduce the results, and modify code as desired.

--- a/src/_content/posts/2023-02-01-c02-v-ch4.md
+++ b/src/_content/posts/2023-02-01-c02-v-ch4.md
@@ -9,6 +9,7 @@ hero:
 tags: [math]
 keywords: []
 socialImg: /assets/img/2023-02-01-co2-v-ch4/co2-v-ch4.png
+software: ['anaconda', 'python', 'jupyterlab', 'smath-studio']
 ---
 
 > I was born in a crossfire hurricane
@@ -249,3 +250,7 @@ Gas Mask: [Unveiling climate models for predicting the Earth’s grim future](ht
 Global Energy Flows: [Modeling the global energy budget](https://brian-rose.github.io/ClimateLaboratoryBook/courseware/zero-dim-ebm.html). [Brian E. J. Rose](http://www.atmos.albany.edu/facstaff/brose/index.html), [The Climate Laboratory](https://brian-rose.github.io/ClimateLaboratoryBook), 2022.
 
 CH4 Relative Impact: [Methane emissions: choosing the right climate metric and time horizon](https://pubs.rsc.org/en/content/articlehtml/2018/em/c8em00414e). Paul Balcombe et al., Royal Society of Chemistry, Sept. 10, 2018.
+
+## Code for this article
+
+[Earth_temperature.sm](https://gist.github.com/XerxesZorgon/c03475012d64b0b3592ea6492bd7b959) - SMath Studio worksheet to estimate the Earth's atmospheric temperature based on the Stefan-Boltzmann Law.
