Added Home links
Linked all posts to the new Wild Peaches landing site: https://wildpeaches.github.io/

--- a/src/_content/posts/2023-02-01-c02-v-ch4.md
+++ b/src/_content/posts/2023-02-01-c02-v-ch4.md
@@ -12,6 +12,8 @@ socialImg: /assets/img/2023-02-01-co2-v-ch4/co2-v-ch4.png
 software: ['anaconda', 'python', 'jupyterlab', 'smath-studio']
 ---
 
+[Home](https://wildpeaches.github.io/)
+
 > I was born in a crossfire hurricane
 > And I howled at the morning drivin' rain
 >
