--- a/src/_content/posts/2024-02-02-problem-2024.md
+++ b/src/_content/posts/2024-02-02-problem-2024.md
@@ -12,6 +12,8 @@ socialImg: /assets/img/2024-02-02-problem-2024/golden-ratio.webp
 software: ['julia', 'jupyterlab', 'wolfram-language', 'pari-gp']
 ---
 
+[Home](https://wildpeaches.github.io/)
+
 This problem is from Otto K. Bretscher posted in the [Classical Mathematics](https://www.facebook.com/photo/?fbid=25084211457829793&set=gm.1328346197833697&idorvanity=340992303235763) Facebook group.
 
 ![bretscher-sequence](/assets/img/2024-02-02-problem-2024/bretscher-sequence.webp)
